------------------------------------------------------------------------------
make the secret area counter on the automap optional
==============================================================================
st_stuff.c                                                          2024/11/10
------------------------------------------------------------------------------
optionally fix ouch face bug
adding backpack with the ammo cheat and now optional
new cheats from Heretic are now optional
==============================================================================
p_inter.c                                                           2024/11/10
------------------------------------------------------------------------------
make the low health medikit message optional
==============================================================================
CFG_EXT.H                                                           2024/11/10
------------------------------------------------------------------------------
added new variables for EXTEND.CFG
==============================================================================
m_misc.c                                                            2024/11/10
------------------------------------------------------------------------------
added new variables for EXTEND.CFG
==============================================================================
p_telept.c                                                          2024/11/11
------------------------------------------------------------------------------
recreated Final Doom teleporter bug (optional)
==============================================================================
p_mobj.c                                                            2024/11/11
------------------------------------------------------------------------------
recreated Lost Souls bouncing bug (from Doom Vanille)
==============================================================================