@@ -14,6 +14,7 @@ extern boolean alwaysRun; // 2024/11/10 make always run optional
 extern boolean secretCount; // 2024/11/10 make secret counter optional
 extern boolean bugFix; // 2024/11/10 vanilla bugfixes now optional
 extern boolean newCheats; // 2024/11/10 new cheats now optional
+extern boolean varPitch; // 2024/11/12 variable sound pitch
 
 /* FS: Custom weapon keys */
 extern boolean	use_wpnbinds;
