@@ -250,6 +250,31 @@ void S_StartSoundAtVolume (void* origin_p, int sfx_id, int volume)
 	{
 		sep = NORM_SEP;
 	}
+  // 2024/11/12 restored from Linux Doom code
+  // hacks to vary the sfx pitches
+  if(varPitch)
+  {
+  if (sfx_id >= sfx_sawup
+      && sfx_id <= sfx_sawhit)
+  {	
+    pitch += 8 - (M_Random()&15);
+    
+    if (pitch<0)
+      pitch = 0;
+    else if (pitch>255)
+      pitch = 255;
+  }
+  else if (sfx_id != sfx_itemup
+	   && sfx_id != sfx_tink)
+  {
+    pitch += 16 - (M_Random()&31);
+    
+    if (pitch<0)
+      pitch = 0;
+    else if (pitch>255)
+      pitch = 255;
+  }
+  } // 2024/11/12 option in EXTEND.CFG  
 
 	// kill old sound
 	S_StopSound(origin);
