@@ -1,3 +1,6 @@
+11-12-24
+ - Restored variable sound pitch as an option in EXTEND.CFG
+
 11-11-24
  - Restored Lost Souls bouncing bug for non-Ultimate/Final Doom
  - New options available in EXTEND.CFG:
