@@ -113,3 +113,11 @@ p_mobj.c                                                            2024/11/11
 ------------------------------------------------------------------------------
 recreated Lost Souls bouncing bug (from Doom Vanille)
 ==============================================================================
+CFG_EXT.H, m_misc.c                                                 2024/11/12
+------------------------------------------------------------------------------
+add option for variable sound pitch
+==============================================================================
+s_sound.c                                                           2024/11/12
+------------------------------------------------------------------------------
+restored variable sound pitch code (optional)
+==============================================================================
